# rust-evented-worker

./: .env.local  .gitignore  Cargo.toml  README.md  justfile  mise.toml  rustfmt.toml  tmuxp.yaml
crates/cmd-spec/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  justfile  release.toml
crates/cmd-spec/src/: lib.rs
crates/cmd-spec/src/experiments/: fluent_plus_mutator_style.rs
crates/serde-command/: Cargo.toml
docs/: architecture.md  defects.md  event_source.md  todo.md
docs/prds/: decouple-data-payload-from-execution-state.md
examples/: activity_retries.rs  misc.rs  quality_check.rs  ralph_loop.rs  reexecute_activity_on_failure.rs  static_code_check.rs  update_pnpm_dependencies.rs  update_readme.rs
examples/lib_ralph_loop/: mod.rs  model.rs
examples/lib_ralph_loop/model/: specification.rs  work_item.rs
src/: .gitignore.local  lib.rs  main.rs
src/activities/: echo.rs  fixed_output.rs  git.rs  mod.rs  shell.rs
src/activities/git/: make_worktree.rs
src/api/: activities.rs  event_store.rs  events.rs  execution.rs  facade.rs  mod.rs  scheduling.rs  steps.rs
src/api/activities/: core.rs  errors.rs  events.rs  handlers.rs  model.rs
src/api/execution/: model.rs
src/api/steps/: core.rs  events.rs  handlers.rs  step_events.rs  step_model.rs  types.rs
src/fixtures/: activity_modules.rs  mod.rs  registry.rs  step_modules.rs
src/impl/: mod.rs
src/impl/event_store/: memory.rs
src/impl_/event_store/: in_memory.rs  mod.rs  sqlite.rs
src/runner/: controller.rs  executor.rs  mod.rs  policy.rs  processor.rs  reduce.rs  registry.rs  restore.rs  scheduler.rs
src/runner/controller/: get_prior_output.rs
src/steps/: echo.rs  fixed_output.rs  mod.rs  shell.rs
src/view/: summarize.rs
(+10 files in other folders)
