[workspace]
members = [".", "crates/cmd-spec"]

[package]
name = "evented-worker"
version = "0.1.0"
edition = "2024"
default-run = "evented-worker"

[dependencies]
cmd-spec = { path = "crates/cmd-spec", features=["tokio"] }
thiserror = "2.0.18"
colored = "3"
serde_json = "1.0.149"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
petgraph = "0.8.3"
