[package]
name = "cmd-spec"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1", features = ["process"], optional = true }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt"] }
