[package]
name = "cmd-spec"
authors = ["sksizer"]
version = "0.1.1"
edition = "2024"
description = "A very simple wrapper around command lines to provide a standard serialization, ergonomic construction and emit tokio or std:process::Cmd objects"
homepage = "https://www.github.com/sksizer/rust-cmd-spec"
repository = "https://www.github.com/sksizer/rust-cmd-spec"
license = "MIT"

[features]
default = ["serde"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1", features = ["process"], optional = true }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt"] }
